ch08/fine-tuned-llama-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fine-tuned-llama-ingress-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: my-llama-finetuned
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: chatbot-ui
    ports:
    - protocol: TCP
      port: 80
